30Mar01=======================================================================
1. fix errors on accept in ExtMsg and in Msg
2. fix the non-blocking problems of connects (and other things in general).
29Mar01=======================================================================
1. add better tracking of AGW circuits (possibly)
2. add set and unset/agwmonitor (ing) [for all the notice it seems to take]
28Mar01=======================================================================
1. AGW engine stuff now accepts incoming calls and at least attempts to do
outgoing ones. YMMV.
2. fixed 'always' telnet on a client line in a connect script
27Mar01=======================================================================
1. add first cut at an AGW Engine. Copy /spider/perl/AGWConnect.pm to 
/spider/local and edit it appropriately. You shouldn't need a login and passwd
if you are using the default setup. It may allow incoming connects (and then
again it may not - I don't have a reliable infrostructure to test with at the
moment). The AGW Engine is a M$ thingy, but that don't preclude you connecting
to it from a unix box. 
22Mar01=======================================================================
1. edit the helpfile for set/debug and add help for show/debug
2. Allow ^Z again on messages
3. Added back onboard support for ax25 OUTBOUND connections. You will need
exactly the same facilities as before (ie netrom_call, ax25_call suid root 
etc) but it is called direct from the cluster.pl - client.pl is DEAD!
19Mar01=======================================================================
1. Add 'not allowed' messages into sh/filter with callsign and reduce priv
2. decode %xx characters in winclient.pl
necessary to 1.
18Mar01=======================================================================
1. minor changes to user and admin manuals.  Added revsion numbers
17Mar01=======================================================================